// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render CardInnerBody 1`] = `
<div
  class="wp-components-surface wp-components-card css-azv6f"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="CardContent"
  >
    <div
      class="wp-components-view wp-components-flex wp-components-card-header css-tycr7a"
      data-g2-c16t="true"
      data-g2-component="CardHeader"
      title="Olaf"
    />
    <div
      class="wp-components-card-inner-body css-1jwn1my"
      data-g2-c16t="true"
      data-g2-component="CardInnerBody"
    >
      Some people are worth melting for.
    </div>
    <div
      class="wp-components-view wp-components-flex wp-components-card-footer css-s1cblh"
      data-g2-c16t="true"
      data-g2-component="CardFooter"
    >
      <div
        class="wp-components-flex-item css-1suoifq"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      >
        <button
          aria-busy="false"
          class="wp-components-button css-1eci7gf"
          data-destructive="false"
          data-g2-c16t="true"
          data-g2-component="Button"
          data-icon="false"
          type="button"
        >
          <span
            class="wp-components-view wp-components-flex css-2r7rsp"
            data-g2-c16t="true"
            data-g2-component="Flex"
          >
            <span
              class="wp-components-flex-item wp-components-flex-block css-13400lq"
              data-g2-c16t="true"
              data-g2-component="ButtonContent"
            >
              Agree
            </span>
          </span>
          <span
            class="wp-components-elevation css-h443as"
            data-g2-c16t="true"
            data-g2-component="ButtonElevation"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="wp-components-elevation css-lhxd4v"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-g2k0uu"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-surface wp-components-card css-azv6f"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="CardContent"
  >
    <div
      class="wp-components-view wp-components-flex wp-components-card-header css-tycr7a"
      data-g2-c16t="true"
      data-g2-component="CardHeader"
      title="Olaf"
    />
    <div
      class="wp-components-scrollable wp-components-card-body css-1368q3i"
      data-g2-c16t="true"
      data-g2-component="CardBody"
    >
      <div
        class="css-1qs21wj"
      >
        Some people are worth melting for.
      </div>
    </div>
    <div
      class="wp-components-view wp-components-flex wp-components-card-footer css-s1cblh"
      data-g2-c16t="true"
      data-g2-component="CardFooter"
    >
      <div
        class="wp-components-flex-item css-1suoifq"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      >
        <button
          aria-busy="false"
          class="wp-components-button css-1eci7gf"
          data-destructive="false"
          data-g2-c16t="true"
          data-g2-component="Button"
          data-icon="false"
          type="button"
        >
          <span
            class="wp-components-view wp-components-flex css-2r7rsp"
            data-g2-c16t="true"
            data-g2-component="Flex"
          >
            <span
              class="wp-components-flex-item wp-components-flex-block css-13400lq"
              data-g2-c16t="true"
              data-g2-component="ButtonContent"
            >
              Agree
            </span>
          </span>
          <span
            class="wp-components-elevation css-h443as"
            data-g2-c16t="true"
            data-g2-component="ButtonElevation"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="wp-components-elevation css-lhxd4v"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-g2k0uu"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render elevation 1`] = `
<div
  class="wp-components-surface wp-components-card css-azv6f"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="CardContent"
  />
  <div
    class="wp-components-elevation css-lhxd4v"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-19fumss"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render no elevation 1`] = `
<div
  class="wp-components-surface wp-components-card css-azv6f"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="CardContent"
  />
  <div
    class="wp-components-elevation css-1505ht1"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-u1d3br"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;
